EKS-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
      - name: backend-app
        # FIX: Your exact AWS Account ID formatted into a valid ECR web address URL
        image: ://amazonaws.com
        ports:
        - containerPort: 5000 
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: ecommerce-backend
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 5000 
  type: ClusterIP
